@@ -843,7 +843,7 @@ $string['pushpage_scopenone'] = 'NO MiniLesson activities';
 $string['pushpage_noactivities'] = 'No MiniLesson activities match the criteria';
 $string['pushpage_noitems'] = 'There MiniLesson activities items in this activity';
 $string['pushitems'] = 'Lesson Items';
-$string['pushitems_details'] = 'The items in this MiniLesson will be pushed to matching MiniLessons. It will only push to MiniLessons in which every item\'s type, order and name match the items in this MiniLesson. It is intended to overwrite only existing items. It wont push files, only text and settings.';
+$string['pushitems_details'] = 'The items in this MiniLesson will be pushed to matching MiniLessons. It will only push to MiniLessons in which every item\'s type, order and name match the items in this MiniLesson. It is intended to overwrite only existing items. It will overwrite text, images and audio in the items, but not the item type or order. It will not add new items to the target MiniLessons.';
 $string['pushconfirm'] = 'You are about to push the setting: <b>{$a->pushthing}</b> to {$a->clonecount} other activities. Are you sure?';
 $string['scopeselector']  = 'Scope: ';
 $string['freespeaking_default_aigrade']  = 'Deduct 1 point for each grammar mistake but do not penalize for spelling or punctuation errors.';
